- Spinner in der Mitte + größer

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Team No Plan</title>
+    <title>Check24 - My Next Vacation</title>
 </head>
 <body>
 
